@@ -1140,6 +1140,14 @@ Some variables function as toggles (On/Off).  Unless otherwise noted 0 is Off an
 </tr>
 <tr>
 	<td width="20%" bgcolor="#ddddff">
+		$g_close_bug_threshold
+	</td>
+	<td width="80%" bgcolor="#ffffff">
+		Access level needed to close bugs.  Look in the constant_inc.php file if you want to set a different value.
+	</td>
+</tr>
+<tr>
+	<td width="20%" bgcolor="#ddddff">
 		$g_login_method
 	</td>
 	<td width="80%" bgcolor="#ffffff">
